<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="ad_id" translatable="false">ca-app-pub-7855551843537355~7087219811</string>


    <string name="app_name">Simple Training Diary</string>

    <string name="textDummy">dummy</string>

    <string name="logout">Logout</string>
    <string name="avatar">Avatar</string>
    <string name="procent">100%</string>
    <string name="minusDay">На день назад</string>
    <string name="plusDay">На день вперед</string>
    <string name="primary_screen_text">primary screen</string>
    <string name="bottom_sheet_name">btm sheet name</string>
    <string name="bottom_sheet_email">btm sheet mail</string>
    <string name="toggle_fab_string">toogle fab</string>
    <string name="nav_item1">1</string>
    <string name="nav_item2">2</string>
    <string name="nav_item3">3</string>
    <string name="nav_item4">4</string>
    <string name="nav_item5">6</string>
    <string name="action_search">SEARCH</string>
    <string name="action_mail">MAIL</string>
    <string name="action_delete">DELETE</string>
    <string name="action_archieve">ARCH</string>
    <string name="categoryDesc">category</string>
    <string name="long_text">Legs asdas dasd asd asd asd asda\nad asd asda sdasd asd asd ad asd asd\nasd asd asd asd asd asd asda sd asdasd</string>
    <string name="long_text1">Legs asdas dasd asd asd asd asda ad asd asda sdasd asd asd ad asd asd asd asd asd asd asd asd asda sd asdasd</string>
    <string name="descIVCategory">ivCategory</string>
    <string name="textDummyShort">dum</string>
    <string name="numDummyShort">13</string>
    <string name="descDelete">Delete</string>
    <string name="descEdit">Edit</string>
    <string name="descAdd">Add</string>


    <string name="snack_restore">Restore</string>
    <string name="snack_record_deleted">Record deleted</string>
    <string name="no_description">Description not specified</string>
    <string name="no_title">Title not specified</string>
    <string name="no_time">No time specified</string>

    <string name="abbr_minute">m</string>
    <string name="abbr_hour">h</string>
    <string name="stat_last_month">Statistics from the start of the month</string>

    <string name="edit_dialog_title">EDIT</string>
    <string name="add_dialog_title">ADD</string>
    <string name="edit_text_groups_hint">Title (muscle groups, etc)</string>
    <string name="edit_text_minutes_hint">Minutes</string>
    <string name="edit_text_description_hint">Description</string>
    <string name="dialog_cancel_btn">Cancel</string>
    <string name="dialog_save_btn">Save</string>
    <string name="nav_menu_exit">Close application</string>
    <string name="dialog_additional_info">Tip: after creating the main workout of the day, you can also add several additional ones, for this in the day card select \"Add more\"</string>
    <string name="msg_exit_from_app">Close Application?</string>

    <string name="dialog_edit_btn">edit</string>
    <string name="dialog_close_btn">Close</string>
    <string name="edit_text_calories_hint">Calories</string>
    <string name="edit_text_distance_hint">Distance</string>
    <string name="space" translatable="false">" "</string>
    <string name="distance_val">%1$s mi</string>
    <string name="calories_val">%1$s kcal</string>
    <string name="abbr_calorie">kcal</string>
    <string name="abbr_distance">mi</string>
    <string name="minutes_val">%1$s min</string>
    <string name="dialog_delete_btn">Delete</string>
    <string name="dialog_delete_note_about_main">IMPORTANT: If you delete the main workout, the additional workouts will also be deleted. If you don\'t want to delete additional workouts, select edit the main workout.</string>
    <string name="dialog_delete_main_workout_question">Delete main workout?</string>
    <string name="dont_ask">Don\'t ask again</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_maybe">Maybe</string>
    <string-array name="weekDays">
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>