<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav1"
            android:icon="@drawable/baseline_mail_white_24"
            android:title="@string/nav_item1"
            />
        <item
            android:id="@+id/nav2"
            android:icon="@drawable/baseline_bookmark_white_24"
            android:title="@string/nav_item2" />
        <item
            android:id="@+id/nav3"
            android:icon="@drawable/baseline_message_white_24"
            android:title="@string/nav_item3" />
        <item
            android:id="@+id/nav4"
            android:icon="@drawable/baseline_note_white_24"
            android:title="@string/nav_item4" />
        <item
            android:id="@+id/navCloseApp"
            android:icon="@drawable/jp_times"
            android:title="@string/nav_menu_exit" />
    </group>
</menu>
