<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Theme.AppCompat.DayNight.Dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:background="#70000000"
    android:elevation="20dp"
    android:padding="20dp">

    <LinearLayout
        android:id="@+id/puMainContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:background="@drawable/popup_shape"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/puTitleContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:padding="8dp">

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/textDummy"
                android:textAllCaps="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLightGrey" />

        <RadioGroup
            android:id="@+id/categoryRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:animateLayoutChanges="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">


            <RadioButton
                android:id="@+id/btnRest"
                android:layout_width="@dimen/imageSizeInAddCaseWindow"
                android:layout_height="@dimen/imageSizeInAddCaseWindow"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/jp_sleep"
                android:gravity="center"
                android:padding="8dp"
                android:textSize="0.1sp" />


            <RadioButton
                android:id="@+id/btnStretch"
                android:layout_width="@dimen/imageSizeInAddCaseWindow"
                android:layout_height="@dimen/imageSizeInAddCaseWindow"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/jp_child"
                android:gravity="center"
                android:padding="8dp"
                android:textSize="0.1sp" />


            <RadioButton
                android:id="@+id/btnPower"
                android:layout_width="@dimen/imageSizeInAddCaseWindow"
                android:layout_height="@dimen/imageSizeInAddCaseWindow"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/jp_dumbbell"
                android:gravity="center"
                android:padding="8dp"
                android:textSize="0.1sp" />


            <RadioButton
                android:id="@+id/btnCardio"
                android:layout_width="@dimen/imageSizeInAddCaseWindow"
                android:layout_height="@dimen/imageSizeInAddCaseWindow"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/jp_heartbeat"
                android:gravity="center"
                android:padding="8dp"
                android:textSize="0.1sp" />


        </RadioGroup>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLightGrey" />

        <LinearLayout
            android:id="@+id/layoutGroupsAndTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="horizontal"
            android:padding="8dp">

            <EditText
                android:id="@+id/etGroups"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:inputType="textCapWords"
                android:background="@drawable/input_ield"
                android:hint="@string/edit_text_groups_hint"
                android:importantForAutofill="no"
                android:maxLength="512"
                android:padding="8dp" />

            <EditText
                android:id="@+id/etMins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="4"
                android:background="@drawable/input_ield"
                android:hint="@string/edit_text_minutes_hint"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="3"
                android:padding="8dp" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/viewForHide"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLightGrey" />

        <FrameLayout
            android:id="@+id/layoutDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">


            <EditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_ield"
                android:hint="@string/edit_text_description_hint"
                android:importantForAutofill="no"
                android:inputType="textCapWords"
                android:maxLength="512"
                android:padding="8dp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLightGrey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="4dp">


            <Button
                android:id="@+id/btnCancel"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/dialog_cancel_btn"
                android:textColor="#ccc" />

            <Button
                android:id="@+id/btnSave"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimaryX"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/dialog_save_btn"
                android:textColor="@color/colorPrimaryLight" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>