<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Theme.AppCompat.DayNight.Dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:background="#70000000"
    android:elevation="20dp"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/puMainContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:background="@drawable/popup_shape"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/puTitleContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:paddingBottom="8dp"
                android:text="@string/action_delete"
                android:textAllCaps="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <LinearLayout
                android:id="@+id/btnClose_DelDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                android:paddingStart="8dp"
                android:paddingTop="0dp"
                android:paddingEnd="0dp"
                android:paddingBottom="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/jp_times" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLightGrey" />


        <LinearLayout
            android:id="@+id/layoutGroupsAndTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="0dp"
            android:paddingTop="8dp"
            android:paddingEnd="0dp"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/etGroups"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGreyDark"
                android:textSize="12sp"
                android:padding="4dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="IMPORTANT: If you delete the main workout, the additional workouts will also be deleted. If you don't want to delete additional workouts, select edit the main workout." />

        </LinearLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLightGrey" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="0dp"
            android:paddingTop="8dp"
            android:paddingEnd="0dp"
            android:paddingBottom="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textSize="16sp"
                android:textAlignment="center"
                android:text="Delete main workout?" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/hideme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/viewForHide"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorLightGrey" />





        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLightGrey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="4dp">


            <Button
                android:id="@+id/btnCancel_DelDialog"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/stardantLineHeight"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/dialog_cancel_btn"
                android:textColor="#ccc" />

            <Button
                android:id="@+id/btnDelete_DelDialog"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/stardantLineHeight"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/dialog_delete_btn"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>